Shift+F1 to switch to asset browser randomly crashes #93508
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#93508
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.106.00
Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-30 10:17, hash:
e1cb2a226c
Worked: (newest version of Blender that worked as expected)
Short description of error
Pressing Shift+F1 to switch editors from X to "file browser" to "asset browser" crashes blender. Unfortunately as far as i can see it seems random, there is a bit of info in the crash report but i don't know what it means to keep testing in that direction.
Exact steps for others to reproduce the error
1- Open blender
2- Start pressing shift+f1 a few times to switch editors,
the crash seems random but every time it crashes it does when switching to asset browser
If doesn't crash in the first few tries, close blender and repeat, any work file should have same probability of crashing
https://youtu.be/hfAw9zqb1Ck
blender.crash.txt
Added subscriber: @NahuelBelich
Added subscriber: @JulianEisel
Tried hard, but couldn't get it to crash (also Linux). Let's see if somebody else can.
Added subscriber: @antoine.grasset
I can reproduce !
MacOS 11.6 / MacBookAir ARM
Blender 3.0.0 ARM version (2021-11-26)
I can also confirm that strangely it either happens in the first 2-10 tries, or never happens.
The speed at which I press shift+f1 also seems to play a part.
Below :
crash_report.txt
IMG_4424.mp4
Added subscriber: @PratikPB2123
@JulianEisel I just found out a consistent way to trigger the bug, cursor movement.
1 Open blender
2 start moving the mouse cursor
3 While moving the mouse cursor press shift+f1 twice
as its mention if it doesn't crash first try, start again
thanks @antoine.grasset your video gave me the idea to try out
https://youtu.be/hfAw9zqb1Ck
Hi, thanks for clarifying. I can confirm the crash on current master:
2f7bec04e8e7e423f11767535b469cdeb5062b14
Changed status from 'Needs Triage' to: 'Confirmed'
This issue was referenced by
256a2d1e98
This issue was referenced by
8cf0d15b60
Changed status from 'Confirmed' to: 'Resolved'