Fix T93508: Shift+F1 to switch to asset browser randomly crashes